# linknotes

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  Search.tsx  Tag.tsx  TagsPanel.tsx  TextEditor.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  test_note.txt
src-tauri/capabilities/: default.json
src-tauri/src/: classifier.rs  lib.rs  main.rs  note.rs  search.rs  workspace.rs
src-tauri/src/classifier-notes/: discrete-math.note  history.note  integrals.note  literature.note  mathematics.note  os.note  philosophy.note  physics.note  reactivity.note  science.note  simd.note  stats.note
src-tauri/testing-workspace/documents/: data.mdb  lock.mdb
src-tauri/testing-workspace/notes.db/: IDENTITY  OPTIONS-000007
