[package]
name = "contextual"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "contextual_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
# kalosm = { git = "https://github.com/floneum/floneum", features = ["language", "surrealdb"] }
# kalosm-learning = { git = "https://github.com/floneum/floneum" }
kalosm = { path = "/Users/evanalmloff/Desktop/Github/floneum/interfaces/kalosm", features = ["language", "surrealdb"] }
kalosm-learning = { path = "/Users/evanalmloff/Desktop/Github/floneum/interfaces/kalosm-learning" }
tokio = "1"
surrealdb = { version = "1", features = ["kv-rocksdb"] }
anyhow = "1.0.90"
tauri-plugin-fs = "2"
slab = "0.4.9"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
tracing-subscriber = "0.3.18"
thiserror = "1.0.68"
tracing = "0.1.40"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
metal = ["kalosm/metal"]
cuda = ["kalosm/cuda"]
